Fixed jumpy mobile menu

--- a/templates/web/src/stylesheets/3-layout/_navigation.scss
+++ b/templates/web/src/stylesheets/3-layout/_navigation.scss
@@ -738,14 +738,22 @@ body {
     }
 
     .navbar-brand {
-        display: inline-block;
+        display: block;
         margin-left: 50px;
         height: 50px;
         line-height: 2.4rem;
+        opacity: 1;
+        visibility: visible;
+        transition: all 0.2s ease-out;
+
+        &.off {
+            opacity: 0;
+            visibility: hidden;
+        }
     }
 
     .navbar-brand-icon {
-        display: inline-block;
+        display: block;
         margin: 4rem 1rem 1rem 1rem;
     }
 
@@ -762,30 +770,29 @@ body {
         background-color: transparent;
 
         display: block;
+        opacity: 1;
         visibility: visible;
         pointer-events: auto;
 
+        transition: all 0.2s ease-out;
+
         &[aria-expanded="true"] {
             display: none;
+            opacity: 0;
             visibility: hidden;
             pointer-events: none;
-
-            & + .navbar-brand {
-                display: none;
-                visibility: hidden;
-                pointer-events: none;
-            }
         }
 
         .icon {
             display: block;
+            opacity: 1;
             visibility: visible;
             line-height: 1.6;
             color: $complementary-color;
-            transition: all 0.2s ease-out;
+            transition: color 0.2s ease-out;
         }
 
-        &.close {
+        &.navbar-close {
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -798,19 +805,27 @@ body {
             opacity: 1;
             pointer-events: none;
 
+            display: block;
+            opacity: 1;
+            visibility: visible;
+            pointer-events: auto;
+
             .icon {
                 display: none;
+                opacity: 0;
                 visibility: hidden;
             }
 
             &[aria-expanded="true"] {
                 display: flex;
+                opacity: 1;
                 visibility: visible;
                 pointer-events: auto;
                 background-color: #444141;
 
                 .icon {
                     display: block;
+                    opacity: 1;
                     visibility: visible;
                 }
             }
@@ -881,7 +896,7 @@ body {
     }
 
     .mainNav {
-        padding: 50px 0 0 1rem;
+        padding: 0 0 0 1rem;
         background-color: $main-color;
 
         .nav-link {
