--- a/templates/web/src/stylesheets/4-components/_boxes-news.scss
+++ b/templates/web/src/stylesheets/4-components/_boxes-news.scss
@@ -910,8 +910,6 @@
                 width: auto;
                 height: 170px;
                 margin-top: 1.4rem;
-
-                border: 2px solid blue;
             }
         }
     }
